# tinc_gpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _CMakeLists.txt  configure.sh  distclean.sh  run.sh  test_out.txt
notebook/01-basics/feedforward_neural_network/: feedforward_neural_network.ipynb  model.ckpt
notebook/02-intermediate/convolutional_neural_network/: convolutional_neural_network.ipynb  convolutional_neural_network_test.ipynb  model.ckpt  test_main.py
notebook/02-intermediate/recurrent_neural_network/: model.ckpt
notebook/03-advanced/generative_adversarial_network/: test_main.py
python/: compute_main.py
src/: computationchain.cpp  main.cpp
tinc/: .gitignore  .gitmodules  CMakeLists.txt  DesignDoc.md  README.md  buildDependencies.cmake  build_deps.sh  update_schema_cpp.sh
tinc/.circleci/: config.yml
tinc/cmake/: BuildExamples.cmake
tinc/cookbook/: voltage_scroller_01.cpp  voltage_scroller_02.cpp  voltage_scroller_03.cpp  voltage_scroller_04.cpp  voltage_scroller_05.cpp
tinc/doc/: Doxyfile  tinc_cache_schema_example.json
tinc/examples/: computationchain.cpp  computationchain_network.cpp  datapool.cpp  datapool_network.cpp  diskbuffer.cpp  netcdf_buffer.cpp  parameter_mutivalue_id.cpp  parameter_sweep.cpp  parameter_sweep_async.cpp  parameter_sweep_async_network.cpp  parameters_from_python.cpp  parameterspace_cache.cpp  parameterspace_files.cpp  parameterspace_gui.cpp  parameterspace_netcdf.cpp  parameterspace_network.cpp  parameterspace_subdirs.cpp  processor_parameter.cpp  tinc_app.cpp  update_parameter_async.cpp  vis_atom_render.cpp  vis_slicing_atom_render.cpp  vis_trajectorymesh.cpp  vis_trajectorymesh_network.cpp
tinc/examples/app/: basic_app.cpp  data_from_python.cpp  trigger_python_compute.cpp  update_graph_python.cpp
tinc/include/tinc/: BufferManager.hpp  CacheManager.hpp  DataPool.hpp  DataPoolJson.hpp  DataPoolNetCDF.hpp  DeferredComputation.hpp  DiskBuffer.hpp  DiskBufferAbstract.hpp  DiskBufferImage.hpp  DiskBufferJson.hpp  DiskBufferNetCDFData.hpp  DiskBufferText.hpp  DistributedPath.hpp  EventLogger.hpp  IdObject.hpp  ParameterSpace.hpp  ParameterSpaceDimension.hpp  PeriodicTask.hpp  Processor.hpp  ProcessorAsyncWrapper.hpp  ProcessorCpp.hpp  ProcessorGraph.hpp  ProcessorScript.hpp  TincClient.hpp  TincProtocol.hpp  TincServer.hpp  VASPReader.hpp
tinc/include/tinc/vis/: AtomRenderer.hpp  GUI.hpp  SceneObject.hpp  TrajectoryRender.hpp  TriangleRender.hpp
tinc/src/: CacheManager.cpp  DataPool.cpp  DataPoolJson.cpp  DataPoolNetCDF.cpp  DiskBuffer.cpp  DiskBufferNetCDFData.cpp  DistributedPath.cpp  IdObject.cpp  ParameterSpace.cpp  ParameterSpaceDimension.cpp  Processor.cpp  ProcessorAsyncWrapper.cpp  ProcessorCpp.cpp  ProcessorGraph.cpp  ProcessorScript.cpp  TincClient.cpp  TincProtocol.cpp  TincServer.cpp  VASPReader.cpp  tinc_cache_schema.cpp  tinc_protocol.proto
tinc/src/vis/: AtomRenderer.cpp  GUI.cpp  SceneObject.cpp  TrajectoryRender.cpp  TriangleRender.cpp
tinc/tests/: CMakeLists.txt  cachemanager.cpp  datapool.cpp  diskbuffer.cpp  parameters.cpp  parameterspace.cpp  processor.cpp  python_common.cpp  python_common.hpp  pythonclient.cpp  pythonclient_barrier.cpp  pythonclient_cache.cpp  pythonclient_datapool.cpp  pythonclient_diskbuffer.cpp  pythonclient_parameters.cpp  pythonclient_parameterspaces.cpp  tincprotocol.cpp  tincprotocol_barrier.cpp  tincprotocol_datapools.cpp  tincprotocol_diskbuffers.cpp  tincprotocol_parameters.cpp  tincprotocol_parameterspaces.cpp  tincprotocol_processors.cpp  tincprotocol_status.cpp  tincprotocol_sync.cpp
tinc/tests/data2/folderB_1/: results.json
tinc/tests/data2/folderB_2/: results.json
tinc/tinc_server/: CMakeLists.txt  main.cpp
